syntax = "proto3";

package bunmart.review.v1;

import "google/protobuf/timestamp.proto";

option java_package = "com.nsbm.bunmart.review.v1";
option java_multiple_files = true;

// ReviewService â€” product reviews and ratings. Consumed by Product Catalog or frontend.
service ReviewService {
  rpc GetReviews(GetReviewsRequest) returns (GetReviewsResponse);
  rpc GetProductRating(GetProductRatingRequest) returns (GetProductRatingResponse);
}

message ReviewInfo {
  string review_id = 1;
  string product_id = 2;
  string user_id = 3;
  int32 rating = 4;
  string comment = 5;
  string status = 6;
  google.protobuf.Timestamp created_at = 7;
}

message GetReviewsRequest {
  string product_id = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message GetReviewsResponse {
  repeated ReviewInfo reviews = 1;
  string next_page_token = 2;
}

message GetProductRatingRequest {
  string product_id = 1;
}

message GetProductRatingResponse {
  string product_id = 1;
  double average_rating = 2;
  int32 total_count = 3;
}
